authority-editor/src/main/resources/kubernetes/pacelli-editor-virtualservice.yml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: pacelli-editor
  annotations:
    # Annotation to introduce a CNAME for the hosts below to the NIC Entry for
    # istio.ms1.k8s.wwu.de (istio ingress on region ms1)
    wwu.io/nic_node: istio.ms1.k8s.wwu.de
spec:
  hosts:
    # hosts are restricted and need to be apply for in the project application.
    - "pacelli-editor.uni-muenster.de"
    - "pacelli-editor.wwu.de"
  gateways:
    - pacelli-editor
  http:
    - route:
        - destination:
            host: marc-authority-editor
            port:
              number: 80
