authority-editor/src/main/resources/kubernetes/pacelli-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: pacelli-gnd-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx-internal"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-request-buffering: "off"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/client-body-buffer-size: "8m"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "8m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "240"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "240"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      send_timeout 240s;
      client_body_timeout 240s;
spec:
  tls:
    - hosts:
        - pacelli-gnd.uni-muenster.de
      secretName: pacelli-tls
  rules:
    - host: pacelli-gnd.uni-muenster.de
      http:
        paths:
          - path: /authorities-management-service
            backend:
              serviceName: authority-management
              servicePort: 8080
          - path: /
            backend:
              serviceName: marc-authority-editor
              servicePort: 8080
