authority-editor/src/main/resources/kubernetes/pacelli-editor-policy.yml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: pacelli-editor-policy
  namespace: pacelli-editor
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: marc-authority-editor
  ingress:
    - fromEndpoints:
        - {}
    - fromEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: authorities-management
      toPorts:
        - ports:
            - port: "8080"
    - toFQDNs:
        - matchPattern: "*.uni-muenster.de"
      toPorts:
        - ports:
            - port: "54331"
